# django-rest-framework-guardian

./: .travis.yml  CHANGELOG  LICENSE  README.md  manage.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: main.yml
src/rest_framework_guardian/: filters.py  serializers.py
tests/: models.py  permissions.py  settings.py  test_permissions.py  test_permissions_assignment.py  test_serializers.py  utils.py
