[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max_line_length = 90
max_complexity = 10

[isort]
atomic=true
line_length = 90
lines_after_imports = 2
multi_line_output=4
known_third_party=django,rest_framework
known_first_party=rest_framework_guardian,tests

[coverage:run]
branch = True
source = src

[coverage:report]
show_missing = True
