[coverage:run]
branch = true
source = src

[coverage:report]
show_missing = true


[flake8]
max_line_length = 90
max_complexity = 10


[isort]
atomic = true
line_length = 90
lines_after_imports = 2
multi_line_output = 4
known_third_party = django,rest_framework
known_first_party = rest_framework_guardian,tests


[metadata]
name = djangorestframework-guardian2
version = 0.4.0
description = django-guardian support for Django REST Framework
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = BSD
license_file = LICENSE

author = Ryan P Kilby
author_email=kilbyr@gmail.com
url = https://github.com/johnthagen/django-rest-framework-guardian
project_urls =
    Source=https://github.com/johnthagen/django-rest-framework-guardian
    Tracker=https://github.com/johnthagen/django-rest-framework-guardian/issues

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP

[options]
install_requires =
    django
    djangorestframework
    django-guardian
include_package_data = true
package_dir =
    =src
packages = find:
zip_safe = false

[options.packages.find]
where = src
